Added: builder for representation in Representations. Changed: builders for agnostic solvers (e.g., GA, MapElites, NSGA-II) now take a representation.